--- a/index.html
+++ b/index.html
@@ -6,6 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mehedy'S Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="images/icons8-globe-16.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="top-section">
+      <div class="top-sec">
+        <h1>
+          Hello, <br />
+          I'm <span> Mehedy Hasan Ador </span> <br />
+        </h1>
+        <h3>
+          Self taught full stack developer, <br />
+          I create wordpress website and do blogging!
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum
+          recusandae temporibus animi blanditiis culpa quod sed ea autem
+          doloribus voluptas perspiciatis, unde porro! Reprehenderit, modi
+          dolorem! Consequuntur laudantium reprehenderit veritatis illo saepe
+          tempore in placeat, molestias minima sequi dignissimos ipsa numquam,
+          omnis asperiores assumenda eaque sed maxime atque voluptate mollitia
+          itaque a dolor fuga?
+        </p>
+        <a class="link-btn" href="https://github.com/iammhador" target="_blank">
+          Hire Me</a
+        >
+      </div>
+      <div class="top-sec">
+        <img src="images/Ador (1).png" alt="Ador's Photo" />
+      </div>
+    </section>
+
+    <section class="mid-section">
+      <div class="top-sec mid-sec">
+        <img src="images/Ador.png" alt="" />
+      </div>
+      <div class="top-sec">
+        <h1>Achieve Your Dream</h1>
+        <h3>Do what makes you happy</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui maiores
+          voluptas aliquam quia laboriosam, neque iure libero culpa nobis!
+          Architecto.
+        </p>
+        <a class="link-btn" href="https://Facebook.com/iammhador" target="_blank">
+            Facebook</a
+      </div>
+    </section>
+  </body>
 </html>
