--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <section class="top-section">
+    <section class="top-section flexable-container">
       <div class="top-sec">
         <h1>
           Hello, <br />
@@ -47,7 +47,7 @@
       </div>
     </section>
 
-    <section class="mid-section">
+    <section class="mid-section flexable-container">
       <div class="top-sec mid-sec">
         <img src="images/Ador.png" alt="" />
       </div>
@@ -59,9 +59,45 @@
           voluptas aliquam quia laboriosam, neque iure libero culpa nobis!
           Architecto.
         </p>
-        <a class="link-btn" href="https://Facebook.com/iammhador" target="_blank">
-            Facebook</a
+        <a
+          class="link-btn"
+          href="https://Facebook.com/iammhador"
+          target="_blank"
+        >
+          Facebook</a
+        >
+      </div>
+    </section>
+
+    <section class="bottom-section">
+      <h1>Experience</h1>
+      <div class="flexable-container">
+        <div class="bottom-sec box1">
+          <h2>Full Stack Web Developer</h2>
+          <h4 class="h4_1">2024-Present | Pro Level Developer</h4>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+        <div class="bottom-sec box2">
+          <h2>Baby Web Developer</h2>
+          <h4 class="h4_2">2020-2022 | Web Dev Learning</h4>
+          <p>
+            They didn't offer me a job. But I made myself as a remove web
+            developer. I made their website and showed it to them. They liked
+            it. And uploaded the content. It was fun working at Programming
+            Hero.
+          </p>
+        </div>
       </div>
     </section>
   </body>
+
+  <footer>
+    <p>© <span>Mehedy Hasan Ador</span> 2022, Build By FN.</p>
+  </footer>
 </html>
